--- a/src/translations/en/editor.json
+++ b/src/translations/en/editor.json
@@ -12,6 +12,7 @@
             "pixabay": "Pixabay",
             "pexels": "Pexels",
             "logomaker": "Logo Maker",
+            "slogan": "Slogan",
             "layers": "Layers"
         }
     }
