--- a/src/translations/en/editor.json
+++ b/src/translations/en/editor.json
@@ -13,6 +13,7 @@
             "pexels": "Pexels",
             "logomaker": "Logo Maker",
             "slogan": "Slogan",
+            "searchslogan": "Search",
             "layers": "Layers"
         }
     }
