--- a/src/translations/es/editor.json
+++ b/src/translations/es/editor.json
@@ -13,6 +13,7 @@
             "pexels": "Pexels",
             "logomaker": "Logomaker",
             "slogan": "Slogan",
+            "searchslogan": "Searchslogan",
             "layers": "Capas"
         }
     }
