--- a/src/translations/es/editor.json
+++ b/src/translations/es/editor.json
@@ -12,6 +12,7 @@
             "pixabay": "Pixabay",
             "pexels": "Pexels",
             "logomaker": "Logomaker",
+            "Removebackground": "Removebackground",
             "slogan": "Slogan",
             "searchslogan": "Searchslogan",
             "layers": "Capas"
