--- a/src/translations/es/editor.json
+++ b/src/translations/es/editor.json
@@ -15,6 +15,7 @@
             "Removebackground": "Removebackground",
             "slogan": "Slogan",
             "searchslogan": "Searchslogan",
+            "searchcreative": "Searchcreative",
             "layers": "Capas"
         }
     }
